# cpp-flag-registrar

./: .gitmodules  CMakeLists.txt  Flag_registrar.hpp  Flag_registrar.tpp  README.md  compile_time_string.hpp  compile_time_string.tpp  formatted_string.hpp  helper.hpp  macros.hpp  main.cpp
.github/workflows/: cmake.yml
tests/: CMakeLists.txt  Register.cpp  Register_test.cpp
